[package]
name = "aes-prng"
version = "0.2.2"
edition = "2021"
license = "Apache-2.0"
authors = [
  "TF Encrypted Authors <tfencrypted@gmail.com>",
  "Dragos Rotaru <r.dragos0@gmail.com>",
  "Morten Dahl <mortendahlcs@gmail.com>",
]
description = "Pseudo-random number generator based on AES"
keywords = [
  "cryptography",
  "random",
  "prng",
  "rng",
  "aes",
]
homepage = "https://github.com/tf-encrypted/aes-prng"
repository = "https://github.com/tf-encrypted/aes-prng"
documentation = "https://docs.rs/aes-prng"
readme = "README.md"
categories = ["cryptography"]

[dependencies]
aes = "0.8"
byteorder = "1.4"
rand = { version = "0.9", features = ["std", "std_rng"] }

[dev-dependencies]
criterion = "0.5"
getrandom = "0.3"
rand_chacha = "0.9"

[[bench]]
name = "rng"
harness = false
